:sparkles: feat: Criação da tela de Catálogo e seu CSS base

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <nav id="sideMenu" class="main-header__navbar">
             <ul class="main-header__navbox">
-                <li class="active-link"><a href="./index.html">Home</a></li>
+                <li class="active-link active-page"><a href="./index.html">Home</a></li>
                 <li class="active-link"><a href="./categorias.html">Catálogo</a></li>
             </ul>
         </nav>
@@ -30,14 +30,11 @@
 
     <main class="main-content">
         <section class="hero">            
-            <h1 class="hero__title">Descubra Produtos Incríveis</h1>
+            <h1 class="hero__title">Descubra Produtos <br> <span class="text-highlight">Incríveis</span></h1>
             <p class="hero__description">Clique no botão abaixo para sortear um produto aleatório da nossa seleção exclusiva</p>
             <button class="btn btn-random"><i class="fa-regular fa-star"></i> Sortear Produto aleatório</button>
         </section>
 
-        <section id="gallery-index" class="gallery">
-            <div class="gallery__placeholder">Aguardando sorteio...</div>
-        </section>
     </main>
 
     <footer class="main-footer">
