:sparkles: feat: Implementa busca inicial da API de produtos

--- a/categorias.html
+++ b/categorias.html
@@ -31,13 +31,13 @@
             <h1 class="hero__title">Catálogo de <br><span class="text-highlight">Produtos</span></h1>
             <p class="hero__description">Escolha uma categoria abaixo para explorar nossa coleção exclusiva</p>
             <div class="hero__btn-box">
-                <button class="btn btn-category"><i class="fa-solid fa-box box--little"></i>Beleza</button>
-                <button class="btn btn-category"><i class="fa-solid fa-box box--little"></i>Fragrância</button>
-                <button class="btn btn-category"><i class="fa-solid fa-box box--little"></i>Movéis</button>
-                <button class="btn btn-category"><i class="fa-solid fa-box box--little"></i>Mecearia</button>
+                <button class="btn btn-category"data-category="beauty"><i class="fa-solid fa-box box--little"></i>Beleza</button>
+                <button class="btn btn-category"data-category="fragrances"><i class="fa-solid fa-box box--little"></i>Fragrância</button>
+                <button class="btn btn-category"data-category="furniture"><i class="fa-solid fa-box box--little"></i>Movéis</button>
+                <button class="btn btn-category" data-category="groceries"><i class="fa-solid fa-box box--little"></i>Mecearia</button>
             </div>
         </section>
-        
+
         <section id="gallery-index" class="gallery">
             <div class="gallery__placeholder">Aguardando sorteio...</div>
         </section>
