:sparkles: feat: Implementa o surgimento da API de produtos dentro do html

--- a/categorias.html
+++ b/categorias.html
@@ -39,7 +39,7 @@
         </section>
 
         <section id="gallery-index" class="gallery">
-            <div class="gallery__placeholder">Aguardando sorteio...</div>
+            <div id="gallery__placeholder">Aguardando sorteio...</div>
         </section>
     </main>
 
