--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
         <nav id="sideMenu" class="main-header__navbar">
             <ul class="main-header__navbox">
-                <li class="active-link active-page"><a href="./index.html">Home</a></li>
-                <li class="active-link"><a href="./categorias.html">Catálogo</a></li>
+                <li><a href="./index.html" class="active-link active-page">Home</a></li>
+                <li><a href="./categorias.html" class="active-link">Catálogo</a></li>
             </ul>
         </nav>
     </header>
