:lipstick: style(transition): Correção nos actives, hovers e suas transições para mobile e desktop

--- a/categorias.html
+++ b/categorias.html
@@ -45,7 +45,7 @@
         </section>
 
         <section id="gallery-index" class="gallery">
-            <div id="gallery__placeholder">Aguardando sorteio...</div>
+            <div id="gallery__placeholder"></div>
         </section>
     </main>
 
