:hammer: feat: Implemento do sistema para gerar um produto aleatório

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         <section class="hero">            
             <h1 class="hero__title">Descubra Produtos <br> <span class="text-highlight">Incríveis</span></h1>
             <p class="hero__description">Clique no botão abaixo para sortear um produto aleatório da nossa seleção exclusiva</p>
-            <button class="btn btn-random"><i class="fa-regular fa-star"></i> Sortear Produto aleatório</button>
+            <button id="randomButton" class="btn btn-random"><i class="fa-regular fa-star"></i> Sortear Produto aleatório</button>
+        </section>
+        <section id="gallery-random">
+
         </section>
     </main>
 
