:pencil: docs: Adição de comentários entorno do todo o projeto

--- a/categorias.html
+++ b/categorias.html
@@ -44,11 +44,13 @@
             </div>
         </section>
 
+        <!-- Galeria de Cards -->
         <section id="gallery-index" class="gallery">
             <div id="gallery__placeholder"></div>
         </section>
     </main>
 
+    <!-- Footer  -->
     <footer class="main-footer">
         <p>&copy; João Gabriel Teodosio de Oliveira Lima - 2025</p>
     </footer>
