--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <i class="fa-solid fa-shop"></i>
             <h2>Shopping</h2>
         </div>
-
+        
         <i id="headerMenu" class="fa-solid fa-bars"></i>
 
         <nav id="sideMenu" class="main-header__navbar">
@@ -34,11 +34,14 @@
             <p class="hero__description">Clique no botão abaixo para sortear um produto aleatório da nossa seleção exclusiva</p>
             <button id="randomButton" class="btn btn-random"><i class="fa-regular fa-star"></i> Sortear Produto aleatório</button>
         </section>
+
+        <!-- Espaço de Card único -->
         <section id="gallery-random">
 
         </section>
     </main>
 
+    <!-- Footer  -->
     <footer class="main-footer">
         <p>&copy; João Gabriel Teodosio de Oliveira Lima - 2025</p>
     </footer>
